Don't add MaxPermSize param on Java 8+ for running perf tests